feat(movies): add endpoint GET /movies/casts to fetch casts
