# docs/swagger.json
@@ -690,6 +690,35 @@
                 }
             }
         },
+        "/movies/casts": {
+            "get": {
+                "description": "Get list of all Casts",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Movies"
+                ],
+                "summary": "Get All Casts",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/utils.Response"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/utils.Response"
+                        }
+                    }
+                }
+            }
+        },
         "/movies/cinemas": {
             "get": {
                 "description": "Get list of all Cinema",
@@ -700,7 +729,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Cinemas"
+                    "Movies"
                 ],
                 "summary": "Get All Cinema",
                 "responses": {
@@ -729,7 +758,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Genres"
+                    "Movies"
                 ],
                 "summary": "Get All Genres",
                 "responses": {
@@ -758,7 +787,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Location"
+                    "Movies"
                 ],
                 "summary": "Get All Locations",
                 "responses": {
@@ -819,7 +848,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Payment Methods"
+                    "Movies"
                 ],
                 "summary": "Get All Payment Method",
                 "responses": {
@@ -848,7 +877,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Times"
+                    "Movies"
                 ],
                 "summary": "Get All Times",
                 "responses": {
